Project WebAI {
  database_type: "PostgreSQL"
  Note: '''
  WebAI database design.
  Core tables:
  auth.users / profiles / conversations / messages / model_catalog / model_fetched.
  favorites is a verified conversation-organization extension.
  search_records was withdrawn and is not present in the current remote schema.
  '''
}

Enum conversation_status {
  active
  archived
}

Enum message_sender_type {
  user
  assistant
}

Enum message_status {
  pending
  streaming
  complete
  cancelled
  error
}

Table auth.users [headercolor: #D9EAFE] {
  id uuid [pk, not null, note: 'Supabase Auth user id']
  email varchar(255) [not null, unique]
  created_at timestamptz [not null, default: `now()`]

  Note: '''
  Authentication identity is provided by Supabase Auth.
  This table is referenced by business tables and should not be treated as a duplicated custom auth table.
  '''
}

Table profiles [headercolor: #EEF6FF] {
  user_id uuid [pk, not null, note: 'References auth.users.id']
  display_name varchar(100)
  avatar_url varchar(500)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
  User-facing profile information for display and account entry.
  '''
}

Table conversations [headercolor: #CFE7FF] {
  id uuid [pk, not null]
  user_id uuid [not null]
  title varchar(100) [not null]
  system_prompt text [note: 'Conversation-level prompt, optional']
  model_id uuid [note: 'References the user-enabled model_fetched.id']
  web_search_enabled boolean [not null, default: true]
  thinking_level text [not null, default: 'minimal']
  status conversation_status [not null, default: 'active']
  archived_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    updated_at
    (user_id, status)
  }

  Note: '''
  Core conversation entity.
  Supports create, open, rename, delete, archive and recover.
  '''
}

Table messages [headercolor: #B7DBFF] {
  id uuid [pk, not null]
  conversation_id uuid [not null]
  sender_type message_sender_type [not null]
  content text [not null]
  status message_status [not null, default: 'complete']
  metadata jsonb [not null, default: '{}']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    conversation_id
    created_at
    (conversation_id, created_at)
  }

  Note: '''
  Stores user prompts and assistant replies.
  metadata carries URL Context, attachments and thinking-related message context.
  '''
}

Table favorites [headercolor: #F4F8FC] {
  id uuid [pk, not null]
  user_id uuid [not null]
  conversation_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    conversation_id
    (user_id, created_at)
    (user_id, conversation_id) [unique]
  }

  Note: '''
  Verified extension entity for conversation favorites.
  '''
}

Table model_catalog [headercolor: #F3F7FF] {
  id uuid [pk, not null]
  provider varchar(50) [not null, default: 'gemini']
  api_style varchar(50) [not null, default: 'gemini_native']
  model_id varchar(160) [not null, unique]
  label varchar(160) [not null]
  description text
  icon text
  input_token_limit integer
  output_token_limit integer
  capabilities jsonb [not null, default: '{}']
  raw_metadata jsonb [not null, default: '{}']
  source varchar(50) [not null, default: 'catalog']
  default_enabled boolean [not null, default: false]
  is_default boolean [not null, default: false]
  sort_order integer [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (default_enabled, sort_order, label)
    (is_default) [unique, note: 'Partial unique in actual migration when is_default = true']
  }

  Note: '''
  Private Gemini capability catalog.
  It is used as a capability completion reference and is not the user-visible model list.
  '''
}

Table model_fetched [headercolor: #F3F7FF] {
  id uuid [pk, not null]
  user_id uuid [not null]
  provider varchar(50) [not null, default: 'gemini']
  api_style varchar(50) [not null, default: 'gemini_native']
  base_url text [not null]
  model_id varchar(160) [not null]
  label varchar(160) [not null]
  description text
  icon text
  input_token_limit integer
  output_token_limit integer
  capabilities jsonb [not null, default: '{}']
  raw_metadata jsonb [not null, default: '{}']
  catalog_id uuid
  source varchar(50) [not null, default: 'fetched']
  is_enabled boolean [not null, default: false]
  is_default boolean [not null, default: false]
  sort_order integer [not null, default: 0]
  fetched_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, is_enabled, sort_order, label)
    (user_id, model_id) [unique]
    (user_id) [unique, note: 'Partial unique in actual migration when is_default = true and is_enabled = true']
  }

  Note: '''
  User-owned Gemini model list fetched from a configured Gemini URL and API key.
  API keys are not stored in this table.
  '''
}

Ref: profiles.user_id - auth.users.id
Ref: conversations.user_id > auth.users.id
Ref: conversations.model_id > model_fetched.id
Ref: messages.conversation_id > conversations.id
Ref: favorites.user_id > auth.users.id
Ref: favorites.conversation_id > conversations.id
Ref: model_fetched.user_id > auth.users.id
Ref: model_fetched.catalog_id > model_catalog.id
